--- a/latex/sections/cf_principe.tex
+++ b/latex/sections/cf_principe.tex
@@ -7,8 +7,8 @@ Diese Verfahren, welche unter anderem unter dem Namen \textit{Proportional-Share
 
 Die Proportional-Share-Scheduler können die Verteilung der Ressource hauptsächlich über zwei Wege erreichen:
 \begin{enumerate}
-	\item Über die Frequenz. Das heißt, wie oft bekommt ein Klient die Zuteilung. Dies kann zum Beispiel mit einer entsprechenden Positionierung in einer Warteschlange realisiert werden.
-	\item Über die Zeit. Dafür wird das Zeitquantum, welches einem Klienten zur Verfügung gestellt wird, entsprechend verlängert oder verkürzt.
+	\item Über die Frequenz, das heißt wie oft bekommt ein Klient die Zuteilung. Dies kann zum Beispiel mit einer entsprechenden Positionierung in einer Warteschlange realisiert werden.
+	\item Über die Zeit, dafür wird das Zeitquantum, welches einem Klienten zur Verfügung gestellt wird, entsprechend verlängert oder verkürzt.
 \end{enumerate}
 
 Wird die Logik des Schedulers mit Hilfe von Prioritäten gesteuert, entsteht schnell ein entscheidendes Problem. Die Klienten mit den höchsten Prioritäten werden bevorzugt und bei anderen Klienten mit niedrigeren Prioritäten kann der Fall auftreten, dass sie keine Zuteilung mehr bekommen und somit \textit{verhungern}.
